@@ -32,11 +32,11 @@ public class BookServiceImplTest {
     @Autowired
     private BookServiceImpl bookService;
 
-    /*@DisplayName("получать книгу по ее title")
+    @DisplayName("получать книгу по ее title")
     @Test
     public void shouldReturnBookByTitle(){
-        given(bookRepository.findByTitle("test")).willReturn(Optional.of(new Book(1,"test",
-                new Author(1, "testAuthor"), new Genre(1, "testGenre"))));
+        given(bookRepository.findByTitle("test")).willReturn(Optional.of(new Book("test",
+                new Author("1", "testAuthor"), new Genre("1", "testGenre"))));
         Book actualBook = bookService.getBookByTitle("test");
         assertThat(actualBook).isNotNull();
     }
@@ -44,9 +44,9 @@ public class BookServiceImplTest {
     @DisplayName("получать книгу по ее id")
     @Test
     public void shouldReturnBookById(){
-        given(bookRepository.findById(1L)).willReturn(Optional.of(new Book(1,"test",
-                new Author(1, "testAuthor"), new Genre(1, "testGenre"))));
-        Book actualBook = bookService.getBookById(1);
+        given(bookRepository.findById("1")).willReturn(Optional.of(new Book("test",
+                new Author("1", "testAuthor"), new Genre("1", "testGenre"))));
+        Book actualBook = bookService.getBookById("1");
         assertThat(actualBook).isNotNull();
     }
 
@@ -54,12 +54,12 @@ public class BookServiceImplTest {
     @Test
     public void shouldReturnAllBooks(){
         List<Book> expectedBookList = Arrays.asList(
-                new Book(1,"test",
-                        new Author(1, "testAuthor"),
-                        new Genre(1, "testGenre")),
-                new Book(2,"test2",
-                        new Author(2, "testAuthor2"),
-                        new Genre(2, "testGenre2")));
+                new Book("test",
+                        new Author("1", "testAuthor"),
+                        new Genre("1", "testGenre")),
+                new Book("test2",
+                        new Author("2", "testAuthor2"),
+                        new Genre("2", "testGenre2")));
         given(bookRepository.findAll()).willReturn(expectedBookList);
         List<Book> actualBookList = bookService.getAllBooks();
         assertThat(actualBookList.equals(expectedBookList));
@@ -69,8 +69,8 @@ public class BookServiceImplTest {
     @Test
     public void shouldThrowBookException(){
         Throwable exception = assertThrows(BookException.class,()->{
-            given(bookRepository.findById(2L)).willReturn(Optional.empty());
-            bookService.getBookById(2);
+            given(bookRepository.findById("2")).willReturn(Optional.empty());
+            bookService.getBookById("2");
         });
         assertEquals("Book with id [2] not found",exception.getMessage());
     }
@@ -79,9 +79,9 @@ public class BookServiceImplTest {
     @Test
     public void shouldReturnAllBooksByGenre(){
         List<Book> expectedBookList = Arrays.asList(
-                new Book(1,"testBookWithGenre",
-                        new Author(1, "testAuthor"),
-                        new Genre(1, "Fantasy")));
+                new Book("testBookWithGenre",
+                        new Author("1", "testAuthor"),
+                        new Genre("1", "Fantasy")));
         given(bookRepository.findAll()).willReturn(expectedBookList);
         List<Book> actualBookList = bookService.getAllBooksWithGivenGenre("Fantasy");
         assertThat(actualBookList.equals(expectedBookList));
@@ -92,56 +92,40 @@ public class BookServiceImplTest {
     @Test
     public void shouldReturnAllBooksByAuthor(){
         List<Book> expectedBookList = Arrays.asList(
-                new Book(1,"testBookWithGenre",
-                        new Author(1, "Tolkien"),
-                        new Genre(1, "Fantasy")));
+                new Book("testBookWithGenre",
+                        new Author("1", "Tolkien"),
+                        new Genre("1", "Fantasy")));
         given(bookRepository.findAll()).willReturn(expectedBookList);
         List<Book> actualBookList = bookService.getAllBooksWithGivenAuthor("Tolkien");
         assertThat(actualBookList.equals(expectedBookList));
         assertThat(actualBookList).hasSize(1);
     }
 
-    @DisplayName("получать все книги которые имеют жанр не равный заданному")
+    @DisplayName("проверять нахождение количества комметариев по книге")
     @Test
-    public void shouldReturnAllBooksByNotLikeGenre(){
-        List<Book> expectedBookList = Arrays.asList(
-                new Book(1,"testBookWithGenre",
-                        new Author(1, "testAuthor"),
-                        new Genre(1, "Fantasy")));
-        given(bookRepository.findAll()).willReturn(expectedBookList);
-        List<Book> actualBookList = bookService.getAllBooksNotLikeGenre("Roman");
-        assertThat(actualBookList.equals(expectedBookList));
-        assertThat(actualBookList).hasSize(1);
+    void shouldFindBookCommentsCount() {
+        Book expectedBook = new Book("testBookWithGenre",
+                        new Author("1", "Tolkien"),
+                        new Genre("1", "Fantasy"));
+        expectedBook.setId("1");
+        List<BookComments> expectedBookComments = List.of(new BookComments(2, 9));
+        given(bookRepository.getBookCommentsByBookId("1")).willReturn(expectedBookComments);
+
+        long actualCount = bookService.getBookCommentsCount(expectedBook.getId());
+        assertThat(expectedBookComments.get(0).getCommentsCount()).isEqualTo(actualCount);
     }
 
-    @DisplayName("получать количество комментариев по книге")
+    @DisplayName("проверять нахождение средней оценки по книге")
     @Test
-    public void shouldReturnBookCommentsCount(){
-        List<BookComments> expectedBookCommentsList = Arrays.asList(
-                new BookComments(
-                        new Book(1, "test",
-                                new Author(1,"testAuthor"),
-                                new Genre(1,"testGenre")),2));
-        given(bookRepository.findBooksCommentsCount()).willReturn(expectedBookCommentsList);
-        List<BookComments> actualBookCommentsList = bookService.getBookCommentsCount();
-        assertThat(actualBookCommentsList).hasSize(1);
-    }
+    void shouldFindBookCommentsAvgRating() {
+        Book expectedBook = new Book("testBookWithGenre",
+                new Author("1", "Tolkien"),
+                new Genre("1", "Fantasy"));
+        expectedBook.setId("1");
+        List<BookComments> expectedBookComments = List.of(new BookComments(2, 9));
+        given(bookRepository.getBookCommentsByBookId("1")).willReturn(expectedBookComments);
 
-    @DisplayName("получать всех книг у которых количество комментариев больше или равно заданному числу")
-    @Test
-    public void shouldReturnBooksByCommentsCount(){
-        List<BookComments> expectedBookList = Arrays.asList(
-                new BookComments(new Book(1, "testBook1",
-                        new Author(1L, "testAuthor1"),
-                        new Genre(1L, "testGenre1")),
-                        2),
-                new BookComments(new Book(2, "testBook2",
-                        new Author(2L, "testAuthor2"),
-                        new Genre(2L, "testGenre2")),
-                        2)
-        );
-        given(bookRepository.findBooksByCountCommentsGreaterOrEqualsThan(2L)).willReturn(expectedBookList);
-        List<BookComments> actualBookList = bookService.getAllBooksByCountCommentsGreaterOrEqualsThan(2L);
-        assertThat(actualBookList).hasSize(2);
-    }*/
+        double actualAvg = bookService.getAvgRatingComments(expectedBook.getId());
+        assertThat(expectedBookComments.get(0).getAvgCommentsRating()).isEqualTo(actualAvg);
+    }
 }
